fixed select rendering bug on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,6 +138,10 @@ input:not([type="checkbox"]):not([type="submit"]), textarea, select {
   }
 }
 
+select {
+	padding: 0 1em;
+}
+
 input[type='checkbox'] {
 	-webkit-appearance:none;
 	width: 20px;
